<resources>
    <string name="app_name">PhotoAlbum</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_gallery">Gallery</string>
    <string name="nav_album">Album</string>
    <string name="nav_recent">Recent</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_recycle_bin">Recycle Bin</string>
    <string name="text_font_size">Font size</string>
    <string name="settings_recycle_bin">Recycle Bin</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_about">About</string>
    <string name="settings_recycle_bin_auto">Automatically delete after 30 days</string>
    <string name="camera">camera</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
</resources>