<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment"
    android:orientation="vertical">

<!--    <TextView-->
<!--        android:id="@+id/textSettings"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:orientation="horizontal"
        android:layout_margin="@dimen/settings_option_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:text="@string/text_font_size"
            android:textSize="@dimen/font_size_list_item"
            android:textStyle="bold"/>
        <SeekBar
            android:id="@+id/seekBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="7"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:orientation="vertical"
        android:layout_margin="@dimen/settings_option_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/open_sans"
                android:textSize="@dimen/font_size_list_item"
                android:textStyle="bold"
                android:text="@string/settings_recycle_bin"/>
            <Switch
                android:id="@+id/switch_recycle_bin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <TextView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/settings_recycle_bin_auto"
            android:fontFamily="@font/open_sans"
            android:textSize="@dimen/font_size_body_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:orientation="horizontal"
        android:layout_margin="@dimen/settings_option_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/open_sans"
            android:textSize="@dimen/font_size_list_item"
            android:textStyle="bold"
            android:text="@string/settings_dark_mode"/>
        <Switch
            android:id="@+id/switch_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_box"
        android:orientation="vertical"
        android:layout_margin="@dimen/settings_option_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:textSize="@dimen/font_size_list_item"
            android:text="@string/settings_about"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>